--- a/src/components/cardList/CardList_style.css
+++ b/src/components/cardList/CardList_style.css
@@ -1,7 +1,7 @@
 .card-list {
-  width: 85vw;
-  margin: 0 auto;
   display: grid;
+  justify-content: center;
   grid-template-columns: repeat(auto-fit, minmax(400px, 400px));
   grid-gap: 20px;
+  padding: 0px 50px;
 }
